force-app/main/default/objects/OLD_SKU__c/OLD_SKU__c.object-meta.xml
<CustomObject>
    <label>OLD  SKU</label>
    <nameField>
        <label>SKU</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OLD SKUS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>