force-app/main/default/objects/OLD_SKU__c/fields/check__c.field-meta.xml
<CustomField>
    <fullName>check__c</fullName>
    <formula>Today()-10</formula>
    <label>check</label>
    <type>Date</type>
</CustomField>