force-app/main/default/objects/OLD_SKU__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>OLD SKUS</relationshipLabel>
    <relationshipName>OLD_SKUS</relationshipName>
    <type>Lookup</type>
</CustomField>