force-app/main/default/objects/OLD_SKU__c/fields/date_value__c.field-meta.xml
<CustomField>
    <fullName>date_value__c</fullName>
    <formula>CreatedDate</formula>
    <label>date value</label>
    <type>DateTime</type>
</CustomField>