force-app/main/default/objects/OLD_SKU__c/fields/user_Department__c.field-meta.xml
<CustomField>
    <fullName>user_Department__c</fullName>
    <formula>$User.Department</formula>
    <label>user Department</label>
    <type>Text</type>
</CustomField>